syntax = "proto3";

option go_package = "./protogen";

import "pmodel.proto";

service TwitchServiceReaction {
  rpc sendDefaultMessage (pmodel.Format.OnlyTitle) returns (pmodel.Empty);
  rpc sendMessage (pmodel.Format.OnlyTitle) returns (pmodel.Empty);
}